<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>gov.uspto</groupId>
	<artifactId>PatentPublicData</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<modules>
		<module>BulkDownloader</module>
		<module>PatentDocument</module>
        <module>Common</module>
        <module>AuthenticationService</module>
        <module>WebService</module>
	</modules>

	<packaging>pom</packaging>

	<properties>
		<sonar.organization>uspto-patent-public-data</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<spring-boot.version>3.3.3</spring-boot.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- Spring Boot BOM for dependency version management -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.10</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>17</source>
					<target>17</target>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<excludes>
						<exclude>**/log4j.properties</exclude>
					</excludes>
					<archive>
						<manifest>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<configuration>
					<skip>true</skip>
					<show>public</show>
					<charset>UTF-8</charset>
					<docencoding>UTF-8</docencoding>
					<docfilessubdirs>true</docfilessubdirs>
					<links>
						<link>https://jsoup.org/apidocs/</link>
						<link>https://google.github.io/guava/releases/19.0/api/docs/</link>
						<link>http://dom4j.sourceforge.net/dom4j-1.6.1/apidocs/</link>
						<link>http://jaxen.org/apidocs/</link>
						<link>http://www.slf4j.org/api/</link>
						<link>https://fasterxml.github.io/jackson-core/javadoc/2.6/</link>
						<link>https://commons.apache.org/proper/commons-lang/javadocs/api-3.4/</link>
						<link>https://fasterxml.github.io/jackson-databind/javadoc/2.6/</link>
						<link>https://fasterxml.github.io/jackson-annotations/javadoc/2.6/</link>
						<link>https://square.github.io/okhttp/3.x/okhttp/</link>
					</links>
					<quiet>true</quiet>
				</configuration>
				<executions>
					<execution>
						<id>aggregate</id>
						<goals>
							<goal>aggregate</goal>
						</goals>
						<phase>package</phase>
					</execution>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
			</plugin>
			<!-- Copy project dependency -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.10</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<includeScope>runtime</includeScope>
							<excludeGroupIds>PatentSimilaritySearch</excludeGroupIds>
							<outputDirectory>${project.build.directory}/dependency-jars/</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-shade-plugin</artifactId> 
				<version>2.4.1</version> <executions> <execution> <phase>package</phase> 
				<goals> <goal>shade</goal> </goals> <configuration> <transformers> </transformers> 
				<filters> <filter> <artifact>*:*</artifact> <excludes> <exclude>META-INF/*.SF</exclude> 
				<exclude>META-INF/*.DSA</exclude> <exclude>META-INF/*.RSA</exclude> </excludes> 
				</filter> </filters> </configuration> </execution> </executions> </plugin> -->
			<!-- javadoc -->
			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-javadoc-plugin</artifactId> 
				<version>2.10.3</version> <configuration> <destDir>docs</destDir> <reportOutputDirectory>${project.basedir}/docs</reportOutputDirectory> 
				<outputDirectory>${project.basedir}/docs</outputDirectory> </configuration> 
				<executions> <execution> <id>aggregate</id> <goals> <goal>aggregate</goal> 
				</goals> <phase>package</phase> </execution> <execution> <id>attach-javadocs</id> 
				<goals> <goal>jar</goal> </goals> <phase>package</phase> </execution> </executions> 
				</plugin> -->
			<!--assembly to zip -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.7.1</version>
				<configuration>
					<appendAssemblyId>false</appendAssemblyId>
					<descriptors>
						<descriptor>resources/assembly/bin.xml</descriptor>
					</descriptors>
					<finalName>${project.artifactId}-${project.version}</finalName>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
